# gc-durbinlab-bucket

./: .gitignore  .pre-commit-config.yaml  README.md  project.cue  pyproject.toml
.github/workflows/: test.yml
terraform/: .terraform.lock.hcl  README.md  accounts.tf  local.tf  storage.tf  variables.tf  versions.tf
terraform/operations/: .terraform.lock.hcl  README.md  accounts.tf  backend.tf  local.tf  variables.tf  versions.tf
terraform/state-management/: .terraform.lock.hcl  README.md  variables.tf  versions.tf
utilities/: README.md  gsutil_sync.bat  gsutil_sync.sh
utilities/durbinlab/: README.md
utilities/waylab/: README.md
