[tool.poetry]
name = "gc-assayworks-bucket"
version = "0.0.1"
description = "Cloud Storage bucket on Google Cloud for Assay.Works data transfer."
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
